# faveworm

./: .gitignore  CMakeLists.txt  Info.plist.in  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
resources/icons/: faveworm.icns
resources/shaders/: fs_crt.sc
src/: FilterJoystick.h  FilterMorpher.h  TestSignalGenerator.h  faveworm.cpp  main.cpp
src/dsp/: GlobalFunctions.h  dfl_FastMath.h  dfl_FilterBase.h  dfl_RPMOscillator.h  dfl_StateVariableFilter.cpp  dfl_StateVariableFilter.h
tests/: beta_analysis  beta_analysis.cpp
